# raylib-cpp-rpg

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-tidy.yml
core/app/: App.cpp  App.hpp
core/entity/: entity.cpp  entity.hpp
core/etc/: system_includes.h
core/gui/: button.cpp  button.hpp  core_gui.hpp  push_button.cpp  push_button.hpp
core/gui/buttons/: button.cpp  button.hpp  push_button.cpp  push_button.hpp
core/gui/images/: images.cpp  images.hpp
core/gui/text/: font.cpp  font.hpp  text_utils.cpp  text_utils.hpp
core/gui/text_box/: text_box.hpp
core/gui/textbox/: text_box.cpp  text_box.hpp
core/managers/: game_manager.cpp  game_manager.hpp
core/renderer/: renderer.cpp  renderer.hpp
core/scene/: charCreationScene.cpp  charCreationScene.hpp  mainScene.cpp  mainScene.hpp  scene.hpp  sceneManager.cpp  sceneManager.hpp  scene_manager.cpp  scene_manager.hpp
core/serialization/: serializable.cpp  serializable.hpp
core/text/: font.cpp  font.hpp
core/time/: timer.cpp  timer.hpp
game/entity/: character.cpp  character.hpp  entity.cpp  entity.hpp
game/managers/: game_manager.cpp  game_manager.hpp  resource_manager.cpp  resource_manager.hpp  resource_manager_v2.cpp  resource_manager_v2.hpp
game/scenes/: charCreationScene.cpp  charCreationScene.hpp  char_creation_scene.cpp  char_creation_scene.hpp  intro_scene.cpp  intro_scene.hpp  login_scene.cpp  login_scene.hpp  mainScene.cpp  mainScene.hpp  main_scene.cpp  main_scene.hpp
game/scenes/menu_scenes/: bag.cpp  bag.hpp  character.cpp  character.hpp  forge.cpp  forge.hpp  map.cpp  map.hpp  settings.cpp  settings.hpp
scripts/: getPixelCoords.py
